# NewsHive

./: .env.example  .flake8  .gitignore  QUICKSTART.md  README.md  config.yaml.example  newshive.py  pyproject.toml  sources.yaml.example
src/: __init__.py  __main__.py  article_preparation.py  categorization.py  cli.py  config.py  discovery.py  email_auth.py  extraction.py  language_detection.py  listings_extractor.py  llm_client.py  models.py  output_versioning.py  pipeline.py  quality_verification.py  relevance_scorer.py  state_store.py  summarization.py  text_cleaning.py  unified_enricher.py
tests/: __init__.py  test_config.py  test_config_listings_type.py  test_date_extraction.py  test_deduplication_simplified.py  test_discovery_date_filtering.py  test_discovery_pagination.py  test_email_archival.py  test_email_discovery.py  test_email_discovery_integration.py  test_email_integration.py  test_email_msg_extraction.py  test_extraction.py  test_extraction_conditional_date.py  test_extraction_rules.py  test_filtered_vs_failed.py  test_inline_listings_dedup.py  test_integration_cli.py  test_listings_extractor.py  test_local_extraction.py  test_logging.py  test_models.py  test_output_versioning.py  test_phase2_discovery.py  test_phase4_async.py  test_pipeline_auto_analysis.py  test_pipeline_freshness_guardrail.py  test_relevance_scorer.py  test_state_store.py  test_unified_enricher.py  test_webhook.py
tools/: __init__.py  _rss_sitemap_report.json  check_feed_bozo.py  check_tagesschau_rss.py  debug_rss_feed.py  inspect_rss_feed.py  test_date_improvements.py  test_rss_date_extraction.py  test_rss_filtering.py
